refactor: remove all traces of todo feature from monorepo
